@@ -1,4 +1,7 @@
 
+2009-04-06 16:06 Ali aliov@xfce.org 
+	 * : Correct tooltip in the brightness plugin
+
 2009-04-06 14:37 Ali aliov@xfce.org 
 	 * : Change brightness on scroll mouse events
 
